# LinuxCommConnection

./: CMakeLists.txt  CommConnection.cpp  CommConnection.h  LICENSE.txt  LinuxNetworkConnection.cpp  LinuxSerialConnection.cpp  Makefile  NetworkConnection.cpp  NetworkConnection.h  NetworkConnectionTest.cpp  PointerExample.cpp  README.md  SerialConnection.cpp  SerialConnection.h  SerialPort.cpp  SerialPort.h  WindowsNetworkConnection.cpp  WindowsSerialConnection.cpp  readme.md
src/: CommConnection.cpp  CommConnection.h  NetworkConnection.cpp  NetworkConnection.h  SerialConnection.cpp  SerialConnection.h
src/Linux/: LinuxNetworkConnection.cpp  LinuxSerialConnection.cpp  NetworkConnection.cpp  SerialConnection.cpp
src/Windows/: NetworkConnection.cpp  SerialConnection.cpp  WindowsNetworkConnection.cpp  WindowsSerialConnection.cpp
tests/: Chatter.cpp  CommConnectionTest.cpp  NetworkConnectionTest.cpp  PointerExample.cpp
